For #5798: avoid menu truncation

--- a/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
+++ b/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
@@ -1244,6 +1244,12 @@ body.orbeon {
         width: 1000px;
         max-width: none;
 
+        // Override the `position: relative` set in `grid.less` so variable completion isn't clipped
+        // When we remove the `position: relative` in `grid.less`, we can remove this as well
+        .xbl-fr-grid .fr-grid:not(.fr-grid-css) .fr-grid-body .fr-grid-td {
+            position: static;
+        }
+
         .xbl-fb-language-choice {
             .navbar {
                 margin: 0;
