--- a/form-builder/jvm/src/main/assets/xbl/fb/xpath-completion/xpath-completion.less
+++ b/form-builder/jvm/src/main/assets/xbl/fb/xpath-completion/xpath-completion.less
@@ -6,8 +6,6 @@
 
 .orbeon {
   text-expander {
-    //display: block;
-    position: relative;
 
     & > .dropdown-menu {
       display: block;
